css/main.css
body    {   margin:         16px;   }

img     {   vertical-align: middle; }

h1, h2, h3, h4, h5, h6  {  font-family: 'Droid Sans', sans-serif; }

table            { border-width: 1px; border-style: solid; border-collapse: collapse; vertical-align: center; }
th               { border-width: 1px; border-style: solid; border-collapse: collapse; padding: 0.3em; }
td               { border-width: 1px; border-style: solid; border-collapse: collapse; padding: 0.3em; }

code             { font-weight: 500; font-size: 1.1em; }

#headerblock {
  background: #eeeeee;
  background: -moz-linear-gradient(top,  #eeeeee 0%, #cccccc 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#eeeeee), color-stop(100%,#cccccc)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  #eeeeee 0%,#cccccc 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  #eeeeee 0%,#cccccc 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  #eeeeee 0%,#cccccc 100%); /* IE10+ */
  background: linear-gradient(to bottom,  #eeeeee 0%,#cccccc 100%); /* W3C */
  height: 100px;
  position: relative;
  padding-left: 100px;
  padding-right: 5px;
  display: block;
  overflow: hidden;
  clear: both;
  margin: -16px -16px 0 -16px;
}

#headerblock .logo        { position: absolute; top: 5px; left: 5px; width: 90px; height: 90px; }

#headerimg a              { text-decoration: none; color: #000; }

#headertext a             { text-decoration: none; color: #000; }
#headertext a:hover       { outline: 0; color: #444; }
#headertext a:active      { outline: 0; color: #444; }
#headertext a:focus       { outline: 0; color: #444; }
#headertext h1            { white-space:nowrap; font-size: 40px; font-weight: 700; line-height: 50px; padding: 0px; margin: 0px; background-repeat: no-repeat; text-shadow: 0px 3px 0px #EEE; }
#headertext h2            { white-space:nowrap; font-size: 20px; font-weight: 700; margin: 0px; padding: 0px; line-height: 30px; }

#headernav                { position: absolute; top: 78px; right: 5px; text-align: right; line-height: 20px;  }

#navigation a             { text-decoration: none; color: #000; }
#navigation table         { border-width: 0px; border-style: solid; border-collapse: collapse; vertical-align: center; }
#navigation th            { border-width: 0px; border-style: solid; border-collapse: collapse; padding: 0.3em; }
#navigation td            { border-width: 0px; border-style: solid; border-collapse: collapse; padding: 0.3em; }

#main li                  { padding-bottom: 5px; padding-top: 3px; }

#construction             { background-color: #888888; padding-bottom: 30px; padding-left: 40px; padding-right: 0px; }

#mapid                    { height: 500px; width: 50%; }

.contact table            { border-width: 0px; border-style: solid; border-collapse: collapse; vertical-align: center; }
.contact th               { border-width: 0px; border-style: solid; border-collapse: collapse; padding: 0.3em; }
.contact td               { border-width: 0px; border-style: solid; border-collapse: collapse; padding: 0.3em; }

.highlight                { text-align:center; background-color: yellow; }

.indent                   { padding-left: 20px; }

.diff-navigate            { height: 20px; vertical-align: top; }

.results-tableheaderrow   { background-color: #dddddd; }
.results-tablerow         { background-color: white;   }
.results-name             { text-align:left; white-space:nowrap; }
.results-region           { text-align:left;   }
.results-network          { text-align:left;   }
.results-datadate         { text-align:center; }
.results-analyzed         { text-align:center; }
.results-analyzed-old     { text-align:center; }
.results-analyzed-new     { text-align:center; background-color: orange; }
.results-discussion       { text-align:left; white-space:nowrap; }
.results-route            { text-align:left; white-space:nowrap; }

.gtfs-tableheaderrow      { background-color: #dddddd; }
.gtfs-tablerow            { background-color: white;   }
.gtfs-name                { text-align:left; white-space:nowrap; }
.gtfs-number              { text-align:center;  }
.gtfs-lat                 { text-align:center; }
.gtfs-lon                 { text-align:center; }
.gtfs-distance            { text-align:right;  }
.gtfs-id                  { text-align:center; }
.gtfs-date                { text-align:center; }
.gtfs-dateold             { text-align:center; background-color: orange; }
.gtfs-datenew             { text-align:center; background-color: lightgreen; }
.gtfs-datenewer           { text-align:center; background-color: limegreen; }
.gtfs-dateverynew         { text-align:center; background-color: green; }
.gtfs-version             { text-align:center; }
.gtfs-text                { text-align:left;   }
.gtfs-checkbox            { text-align:center; }
.gtfs-comment             { text-align:left;   }
.gtfs-whitetext           { color:white;      }
.shape-lat                { text-align:center; }
.shape-lon                { text-align:center; }

.ptna-data textarea       { overflow: auto;    }

.button-save              { border-width: 2px; font-weight: 500; font-size: 0.8em; padding: 0.5em; background-color: lightgreen; }
.button-create            { border-width: 2px; font-weight: 500; font-size: 0.8em; padding: 0.5em; background-color: lightgreen; }
.button-cancel            { border-width: 2px; font-weight: 500; font-size: 0.8em; padding: 0.5em; background-color: lightsalmon; }

#message-table img        { width: 100px; z-index: 1; }
#message-table img:hover  { transform: translate(-295%,295%) scale(7.0); z-index: 2; }
.message-tableheaderrow   { background-color: #dddddd; text-align:left; }
.message-tablerow         { background-color: white;   text-align:left; vertical-align:top;   }
.message-text             { text-align:left; }
.message-type             { text-align:left; }
.message-option           { white-space:nowrap; }
.message-description      { text-align:left; }
.message-fix              { text-align:left; }
.message-image            { text-align:left; }

.message-tooltip                            { position: relative;  display: inline-block; }
.message-tooltip       .message-tooltiptext { visibility: hidden;  background-color: black; width: 700px; color: #fff; text-align: center; padding: 3px; top: -5px;right: -5px; position: absolute; z-index: 3; }
.message-tooltip:hover .message-tooltiptext { visibility: visible; }


#analysis table           { border-width: 1px; border-style: solid; border-collapse: collapse; vertical-align: center; }
#analysis th              { border-width: 1px; border-style: solid; border-collapse: collapse; padding: 0.2em; }
#analysis td              { border-width: 1px; border-style: solid; border-collapse: collapse; padding: 0.2em; }
#analysis ol              { list-style: none; }
#analysis img             { width: 20px; vertical-align: top; }
#analysis .tableheaderrow { background-color: LightSteelBlue;   }
#analysis .sketchline     { background-color: LightBlue;        }
#analysis .sketch         { text-align:left;  font-weight: 500; }
#analysis .csvinfo        { text-align:right; font-size: 0.8em; }
#analysis .ref            { white-space:nowrap; }
#analysis .relation       { white-space:nowrap; }
#analysis .PTv            { text-align:center; }
#analysis .number         { text-align:right; }
#analysis .attention      { background-color: yellow; font-weight: 500; font-size: 1.2em; }

.statistics-tableheaderrow   { background-color: #dddddd; }
.statistics-tablerow         { background-color: white;   }
.statistics-name             { text-align:left; white-space:nowrap; }
.statistics-network          { text-align:left;   }
.statistics-text             { text-align:left;   }
.statistics-date             { text-align:center; }
.statistics-duration         { text-align:right; }
.statistics-size             { text-align:right; }
.statistics-number           { text-align:right; }

